# mlops-incident-env

./: .gitignore  .pylintrc  DEBUG_REPORT.md  Dockerfile  README.md  README_YELLOW_LINES_FIXED.txt  VENV311_SETUP_COMPLETE.txt  YELLOW_LINES_COMPLETE_FIX_REPORT.md  __init__.py  blog.md  client.py  hf_job_final.env  hf_train.py  inference.py  inference1.py  models.py  openenv.yaml  patch_app.py  pyproject.toml  requirements.txt  testmodel.py  validate-submission.ps1
docs/: hf-openenv-mini-blog.md
scripts/: _submit_hf_job_once.py  oracle_traces_to_sft_jsonl.py  upload_oracle_artifacts.py
server/: Dockerfile  __init__.py  app.py  environment.py  requirements.txt  scenario_generator.py
server/data/: cascade_scenario.json  easy_scenario.json  hard_scenario.json  medium_scenario.json
server/tasks/: __init__.py  cascade_task.py  easy_task.py  grading_utils.py  hard_task.py  medium_task.py
